# grid_test.rs

./: Cargo.toml  README.md
data/: viirs_cloud_top_height.csv  viirs_cloud_top_height_stats.csv
data/inputs/: viirs_cloud_top_height_3.csv
src/: args.rs  compute.rs  inputs.rs  lib.rs  main.rs  outputs.rs
src/inputs/: reads.rs
src/outputs/: writes.rs
