[package]
name = "grid_test"
version = "0.1.0"
edition = "2021"

 [lib]
 name = "data"
 path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["cargo"] }
clippy = "0.0.302"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
