[package]
name = "grid_test"
version = "0.1.0"
edition = "2021"

 [lib]
 name = "data"
 path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.2.7", features = ["cargo"] }
clippy = "0.0.302"
csv = "1.1"
glob = "0.3.1"
log = "0.4.19"
log4rs = "1.2.0"
serde = { version = "1", features = ["derive"] }
walkdir = "2.3.3"
